; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pas2_pcm.c_pas_audio_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pas2_pcm.c_pas_audio_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [54 x i8] c"pas2_pcm.c: static int pas_audio_open(int mode = %X)\0A\00", align 1
@pas_lock = common dso_local global i32 0, align 4
@pcm_busy = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@PAS_PCM_INTRBITS = common dso_local global i32 0, align 4
@pcm_count = common dso_local global i64 0, align 8
@open_mode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @pas_audio_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pas_audio_open(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @printk(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @DEB(i32 %9)
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @spin_lock_irqsave(i32* @pas_lock, i64 %11)
  %13 = load i32, i32* @pcm_busy, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i64, i64* %7, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* @pas_lock, i64 %16)
  %18 = load i32, i32* @EBUSY, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %30

20:                                               ; preds = %2
  store i32 1, i32* @pcm_busy, align 4
  %21 = load i64, i64* %7, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* @pas_lock, i64 %21)
  %23 = load i32, i32* @PAS_PCM_INTRBITS, align 4
  %24 = call i32 @pas_set_intr(i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %20
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %30

28:                                               ; preds = %20
  store i64 0, i64* @pcm_count, align 8
  %29 = load i32, i32* %5, align 4
  store i32 %29, i32* @open_mode, align 4
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %28, %26, %15
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @DEB(i32) #1

declare dso_local i32 @printk(i8*, i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @pas_set_intr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
